# rag

./: .gitignore  README.md  langchain_embedding_with_local_llm.ipynb  langchain_rag_test.ipynb  langchain_rag_test_4.ipynb  main.py  pyproject.toml  刑法.txt
experiments/: langchain_embedding_with_local_llm.ipynb  langchain_rag_test.ipynb  langchain_with_local_llm.ipynb  test_langchain_openai.py  test_openai_compatibility_api.py
utils/: chatbot.py  embeddings.py  rag.py  rerankers.py  rewriter.py  vectorstores.py
